--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,9 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Experience
-    url: '#experience'
-    weight: 30
+#  - name: Experience
+#    url: '#experience'
+#    weight: 30
   - name: Projects
     url: '#projects'
     weight: 40
@@ -17,7 +17,7 @@ main:
    # url: '#talks'
     #weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#publication'
     weight: 20
   #- name: Contact
    # url: '#contact'
