--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,15 +10,15 @@ main:
 #  - name: Experience
 #    url: '#experience'
 #    weight: 30
-  - name: Projects
-    url: '#projects'
-    weight: 40
+#  - name: Projects
+#    url: '#projects'
+#    weight: 40
   #- name: Talks
    # url: '#talks'
     #weight: 40
-  - name: Publications
-    url: '#publication'
-    weight: 20
+#  - name: Publications
+#    url: '#publication'
+#    weight: 20
   #- name: Contact
    # url: '#contact'
     #weight: 60
