--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,18 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-#  - name: Experience
-#    url: '#experience'
-#    weight: 30
-#  - name: Projects
-#    url: '#projects'
-#    weight: 40
+  - name: Experience
+    url: '#experience'
+    weight: 30
+  - name: Projects
+    url: '#projects'
+    weight: 40
   #- name: Talks
    # url: '#talks'
     #weight: 40
-#  - name: Publications
-#    url: '#publication'
-#    weight: 20
+  - name: Publications
+    url: '#publication'
+    weight: 20
   #- name: Contact
    # url: '#contact'
     #weight: 60
