--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: '#experience'
     weight: 30
   - name: Projects
-    url: '#projects'
+    url: '#project'
     weight: 40
   #- name: Talks
    # url: '#talks'
